Setup LWC to test SlackPublisher

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -3,8 +3,8 @@
         "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
-            "c/SendToSlackLWC": [
-                "SendToSlackLWC/SendToSlackLWC.js"
+            "c/sendToSlackLWC": [
+                "sendToSlackLWC/sendToSlackLWC.js"
             ]
         }
     },
